# glassesTools

./: .gitignore  pyproject.toml
src/glassesTools/: __init__.py  annotation.py  aruco.py  async_thread.py  camera_recording.py  data_files.py  data_types.py  drawing.py  eyetracker.py  file_action_provider.py  file_actions.py  fixation_classification.py  gaze_headref.py  gaze_overlay_video.py  gaze_worldref.py  intervals.py  json.py  marker.py  naming.py  ocv.py  plane.py  platform.py  pose.py  process_pool.py  propagating_thread.py  recording.py  timestamps.py  transforms.py  utils.py  version.py  video_utils.py
src/glassesTools/gui/: __init__.py  file_picker.py  recording_table.py  signal_sync.py  timeline.py  utils.py  video_player.py  worldgaze.py
src/glassesTools/importing/: SMI_ETG.py  SeeTrue_STONE.py  VPS.py  __init__.py  adhawk_mindlink.py  argus_ETVision.py  generic.py  meta_aria_gen1.py  pupilLabs.py  tobii_G2.py  tobii_G3.py
src/glassesTools/mp4analyser/: __init__.py  core.py  iso.py  mpeglookups.py  non_iso.py  summary.py  util.py
src/glassesTools/validation/: __init__.py  assign_intervals.py  compute_offsets.py  export.py
src/glassesTools/validation/config/: __init__.py
src/glassesTools/validation/default_poster/: __init__.py
src/glassesTools/validation/dynamic/: __init__.py  stim.py
tools/: meta_aria_gen1_exporter.py
